data/derived/sp14/progs/unify/prog0774.ml.out
Characters 114-132:
  let seen' = if List.mem (h, seen) then helper (h::seen, t) in
                 ^^^^^^^^^^^^^^^^^^
Error: This expression has type ('a * 'b) list -> bool
       but an expression was expected of type bool
